fix z-index

--- a/src/app/modulos/core/components/area-selectorind/area-selectorind.component.scss
+++ b/src/app/modulos/core/components/area-selectorind/area-selectorind.component.scss
@@ -1,4 +1,4 @@
 .ui-dialog{
-    z-index: 1 !important;
+    z-index: 2 !important;
     top: 1px !important;
 }
